--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
-name = "finalproject"
+name = "fraud_analysis"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+csv = "1.3.0"
+serde = { version = "1.0", features = ["derive"] }
+petgraph = "0.6.4"
+ndarray = "0.15.6"
+linfa = "0.7.0"
+linfa-clustering = "0.7.0"
